XWIKI-973: Flickering size for form buttons on some systems Fixed
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki/trunk/web@2373 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/skins/xwiki10b1/elements.css
+++ b/xwiki-platform-web/standard/src/main/webapp/skins/xwiki10b1/elements.css
@@ -147,6 +147,9 @@ iframe {}
 /* Section 17: Forms */
 form { margin: 0px; }
 input {}
+.button{
+  font-size: 1em;
+}
 input:focus {}
 button {}
 button:focus {}
